--- a/fastlane/metadata/ja/release_notes.txt
+++ b/fastlane/metadata/ja/release_notes.txt
@@ -1,3 +1,1 @@
-このバージョンでは、次の修正と改良が行われました。
-- 「注文の詳細」で、注文状況が「プルして更新」で更新されるようになりました。
-- さまざまな画面で UI の小さな改良が行われました。
+- より少ないタップで受注を確認:注文詳細画面からペーストボードに追跡番号をコピーできるようになりました。
