--- a/fastlane/metadata/ko/release_notes.txt
+++ b/fastlane/metadata/ko/release_notes.txt
@@ -1,3 +1,1 @@
-이 버전은 수정 및 개선 사항에 대한 것입니다.
-- 주문 정보에서 끌어당겨 새로 고칠 때 주문 상태가 새로 고쳐집니다.
-- 다른 화면에서 일부 UI가 약간 개선되었습니다.
+- 몇 번의 탭만으로 주문 관리: 이제 추적 번호를 주문 세부 정보 화면에서 게시판에 바로 복사할 수 있습니다.
