--- a/fastlane/metadata/ru/release_notes.txt
+++ b/fastlane/metadata/ru/release_notes.txt
@@ -1,3 +1,1 @@
-В этой версии много исправлений и усовершенствований:
-— Теперь статус заказа в деталях заказа обновляется касанием экрана.
-— Несколько небольших усовершенствований интерфейса на различных экранах.
+- Тратьте меньше времени на отслеживание заказов: Теперь можно копировать номера отслеживания прямо в буфер обмена с экрана сведений о заказах.
