--- a/fastlane/metadata/tr/release_notes.txt
+++ b/fastlane/metadata/tr/release_notes.txt
@@ -1,3 +1,1 @@
-Bu sürümde çok sayıda düzeltme ve iyileştirme yapıldı:
-– Artık Sipariş Detayları sayfasında çekerek yenile özelliği ile sipariş durumu yenilenebiliyor.
-– Farklı ekranlarda bazı ufak Kullanıcı Arayüzü iyileştirmeleri yapıldı.
+- Birkaç dokunmayla siparişler hakkında bilgi edinin: Şimdi, sipariş bilgileri ekranındaki izleme numaralarını panoya kopyalayabilirsiniz.
